--- a/src/project/App.html
+++ b/src/project/App.html
@@ -1,6 +1,7 @@
 <Dragbar/>
 <main>
 	<Input/>
+	<Table/>
 </main>
 
 <style type="text/stylus">
@@ -18,6 +19,7 @@
 		components: {
 			Dragbar: '../components/Dragbar.html',
 			Input: '../components/Input.html',
+			Table: '../components/Table.html'
 		},
 		data() {
 			return {
