actual datatype via lookup

--- a/pages/project.html
+++ b/pages/project.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="../assets/global.css">
 		<link rel="stylesheet" href="../assets/svelte.css">
+		<link rel="stylesheet" href="../assets/codemirror.css">
+
 	</head>
 	<body>
 		<script>
