--- a/src/launcher/App.html
+++ b/src/launcher/App.html
@@ -1,7 +1,7 @@
 <Dragbar/>
 <main>
 	<div id="menu">
-    <button class="{flavor === 'sqlite' ? 'active' : ''}"on:click="set({ flavor: 'sqlite' })">SQLite</button><button class="{flavor === 'pg' ? 'active' : ''}" on:click="set({ flavor: 'pg' })">PostgreSQL</button>
+    <button class="{flavor === 'pg' ? 'active' : ''}" on:click="set({ flavor: 'pg' })">PostgreSQL</button><button class="{flavor === 'sqlite' ? 'active' : ''}"on:click="set({ flavor: 'sqlite' })">SQLite</button>
   </div>
 
   <div id="list">
@@ -69,7 +69,7 @@ export default {
 	},
 	data () {
 		return {
-			flavor: 'sqlite'
+			flavor: 'pg'
 		};
 	}
 };
