--- a/src/project/App.html
+++ b/src/project/App.html
@@ -1,5 +1,6 @@
 <Dragbar/>
 <main>
+	<History/>
 	<Input/>
 	<Table/>
 </main>
@@ -18,13 +19,9 @@
 export default {
 	components: {
 		Dragbar: '../components/Dragbar.html',
+		History: '../components/History.html',
 		Input: '../components/Input.html',
 		Table: '../components/Table.html'
-	},
-	data () {
-		return {
-			flavor: window.flavor
-		};
 	}
 };
 </script>
