put in titlebar

--- a/src/project/App.html
+++ b/src/project/App.html
@@ -1,4 +1,3 @@
-<Dragbar/>
 <main>
 	<History/>
 	<Input/>
@@ -7,7 +6,7 @@
 
 <style type="text/stylus">
 	main
-		padding 2em 1em
+		padding 1em
 </style>
 
 <script>
