add view switcher

--- a/pages/launcher.html
+++ b/pages/launcher.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Incidents and accidents</title>
+		<title>VintageDB</title>
 
 		<link rel="stylesheet" href="../assets/global.css">
 		<link rel="stylesheet" href="../assets/svelte.css">
