--- a/src/project/App.html
+++ b/src/project/App.html
@@ -1,7 +1,8 @@
 <main>
-	<History/>
-	<Input/>
-	<Table/>
+	<History />
+	<Input />
+	<ViewSwitcher />
+	<ViewManager />
 </main>
 
 <style type="text/stylus">
@@ -18,7 +19,8 @@ export default {
 		Dragbar: '../components/Dragbar.html',
 		History: '../components/History.html',
 		Input: '../components/Input.html',
-		Table: '../components/Table.html'
+		ViewSwitcher: '../components/ViewSwitcher.html',
+		ViewManager: '../components/ViewManager.html'
 	}
 };
 </script>
