--- a/pages/project.html
+++ b/pages/project.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="../assets/global.css">
 		<link rel="stylesheet" href="../assets/svelte.css">
 		<link rel="stylesheet" href="../assets/codemirror.css">
+		<link rel="stylesheet" href="../assets/mapbox-gl.css">
 
 	</head>
 	<body>
