add some not working view management

--- a/pages/project.html
+++ b/pages/project.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="../assets/svelte.css">
 		<link rel="stylesheet" href="../assets/codemirror.css">
 		<link rel="stylesheet" href="../assets/mapbox-gl.css">
-
+		<script src="../assets/mapbox-gl.js"></script>
 	</head>
 	<body>
 		<script>
